# delta-database

./: .gitignore  HANDOFF.md  README.md  delta-database-dev-setup.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.jsx  api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  motec.rs
