[package]
name = "apex-logbook"
version = "0.1.0"
description = "Track session database for motorsport engineering"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
motec-i2 = "0.2"
base64 = "0.22"
dirs = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
